PSPRO01-2411: Resolved layout issue

--- a/web/themes/contrib/provus_edu/scss/global/_webform.scss
+++ b/web/themes/contrib/provus_edu/scss/global/_webform.scss
@@ -167,3 +167,10 @@
     margin-right: 0;
   }
 }
+
+//fix for provus_edu
+.webform-submission-contact-form {
+  max-width: 740px;
+  width: 100%;
+  margin: 0 auto;
+}
